infra/homelab/apps/command-runner/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-runner
  namespace: command-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-runner
  template:
    metadata:
      labels:
        app: command-runner
    spec:
      containers:
        - name: command-runner
          image: ghcr.io/ininicho/command-runner:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
