infra/homelab/apps/command-runner/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: command-runner
  namespace: command-runner
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: pi.ininicho.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: command-runner
                port:
                  number: 5000
